# mnist_classification

./: .gitignore  CMakeLists.txt  README.md  plot.py
include/: get_time.hpp  models.hpp
results/: experiment_20251109_172409.json
src/: main.cpp
